--- a/app/src/main/res/layout/fragment_show_profile.xml
+++ b/app/src/main/res/layout/fragment_show_profile.xml
@@ -127,7 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="0"
+                android:text="@string/def_numRev"
                 app:layout_constraintBottom_toBottomOf="@+id/total_reviews"
                 app:layout_constraintStart_toEndOf="@+id/total_reviews" />
 
@@ -137,8 +137,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="0"
-                android:textSize="20dp"
+                android:text="@string/def_numRev"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/userRatingBar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/userRatingBar"
