--- a/app/src/main/res/layout-land/fragment_show_profile.xml
+++ b/app/src/main/res/layout-land/fragment_show_profile.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="0"
+                android:text="@string/def_numRev"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/userRatingBar"
                 app:layout_constraintEnd_toEndOf="parent"
