--- a/app/src/main/res/layout-large-land/fragment_show_profile.xml
+++ b/app/src/main/res/layout-large-land/fragment_show_profile.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="0"
+            android:text="@string/def_numRev"
             app:layout_constraintStart_toEndOf="@+id/total_reviews"
             app:layout_constraintTop_toBottomOf="@+id/userRatingBar"
             app:layout_constraintBaseline_toBaselineOf="@+id/total_reviews"/>
@@ -38,8 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="8dp"
-            android:text="0"
-            android:textSize="20dp"
+            android:text="@string/def_numRev"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/userRatingBar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/userRatingBar"
