--- a/app/src/main/res/layout/reviews_recycler_view.xml
+++ b/app/src/main/res/layout/reviews_recycler_view.xml
@@ -19,7 +19,7 @@
         android:id="@+id/empty_reviews_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ooops! No reviews for this user"
+        android:text="@string/norevs"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/review_recycler_view"
         app:layout_constraintEnd_toEndOf="@+id/review_recycler_view"
