--- a/app/src/main/res/layout/fragment_item_edit.xml
+++ b/app/src/main/res/layout/fragment_item_edit.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4" />
+            app:layout_constraintGuide_percent="0.25" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -79,22 +79,20 @@
                 app:layout_constraintBottom_toTopOf="@+id/item_price"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="spread_inside" />
+                app:layout_constraintVertical_chainStyle="spread" />
 
             <EditText
                 android:id="@+id/item_title_edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:inputType="textMultiLine"
                 android:selectAllOnFocus="true"
                 android:singleLine="true"
                 android:text="@string/title_std"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/item_price_edit"
+                app:layout_constraintBaseline_toBaselineOf="@+id/item_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/details_value_guideline"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="spread_inside" />
 
 
@@ -121,10 +119,9 @@
                 android:text="@string/price_val_std"
                 android:textColor="#005BA3"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/details_guideline"
+                app:layout_constraintBaseline_toBaselineOf="@+id/item_price"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/details_value_guideline"
-                app:layout_constraintTop_toBottomOf="@+id/item_title_edit" />
+                app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
 
             <TextView
                 android:id="@+id/price_currency"
@@ -145,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:visibility="visible"
-                app:layout_constraintGuide_percent="0.22"
+                app:layout_constraintGuide_percent="0.20"
                 tools:visibility="visible" />
 
             <TextView
@@ -190,7 +187,7 @@
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-light"
                 android:text="@string/location"
-                app:layout_constraintBottom_toTopOf="@+id/item_expire_date"
+                app:layout_constraintBottom_toTopOf="@+id/itemLocationMap"
                 app:layout_constraintStart_toStartOf="@+id/item_subcategory"
                 app:layout_constraintTop_toBottomOf="@+id/item_subcategory" />
 
@@ -203,7 +200,7 @@
                 android:text="@string/expire_date_header"
                 app:layout_constraintBottom_toTopOf="@+id/item_condition"
                 app:layout_constraintStart_toStartOf="@+id/item_location_details"
-                app:layout_constraintTop_toBottomOf="@+id/item_location_details" />
+                app:layout_constraintTop_toBottomOf="@+id/itemLocationMap" />
 
             <TextView
                 android:id="@+id/item_condition"
@@ -290,6 +287,7 @@
                 android:id="@+id/item_picture_description_edit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:selectAllOnFocus="true"
                 android:text="@string/description"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -304,6 +302,17 @@
                 app:layout_constraintBaseline_toBaselineOf="@id/item_expire_date"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/item_expire_date_value" />
+
+            <com.example.myapplication.CustomMapView
+                android:id="@+id/itemLocationMap"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@id/item_expire_date"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/item_location_details" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -340,7 +349,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.2" />
+            app:layout_constraintGuide_percent="0.20112179" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
