--- a/app/src/main/res/layout-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-land/fragment_item_edit.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -306,10 +307,22 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf=""
+                app:layout_constraintTop_toBottomOf="@id/item_location_details"
                 tools:layout_editor_absoluteY="291dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="245dp"
+            android:layout_height="163dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/item_picture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/item_picture"
+            app:layout_constraintTop_toTopOf="@+id/item_picture" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
