--- a/app/src/main/res/layout-large/fragment_item_edit.xml
+++ b/app/src/main/res/layout-large/fragment_item_edit.xml
@@ -307,5 +307,16 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="245dp"
+            android:layout_height="163dp"
+            app:layout_constraintBottom_toBottomOf="@+id/item_picture"
+            app:layout_constraintEnd_toEndOf="@+id/item_picture"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="@+id/item_picture" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
