--- a/app/src/main/res/layout-large-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-large-land/fragment_item_edit.xml
@@ -61,9 +61,9 @@
                 <EditText
                     android:id="@+id/item_condition_value"
                     android:layout_width="0dp"
-                    android:textSize="20sp"
                     android:layout_height="wrap_content"
                     android:text="@string/condition_value"
+                    android:textSize="20sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/item_condition"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
@@ -79,16 +79,16 @@
                     app:layout_constraintBottom_toTopOf="@+id/item_price"
                     app:layout_constraintStart_toStartOf="@id/fieldsGuideline"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_chainStyle="spread_inside" />
+                    app:layout_constraintVertical_chainStyle="spread" />
 
                 <EditText
                     android:id="@+id/item_title_edit"
-                    android:textSize="24sp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="13dp"
                     android:inputType="textMultiLine"
                     android:text="@string/title_std"
+                    android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/item_price_edit"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@id/details_value_guideline"
@@ -119,11 +119,10 @@
                     android:text="@string/price_val_std"
                     android:textColor="#005BA3"
                     android:textSize="24sp"
-                    app:layout_constraintBottom_toTopOf="@+id/details_guideline"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/item_price"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@id/details_value_guideline"
-                    app:layout_constraintTop_toBottomOf="@+id/item_title_edit" />
+                    app:layout_constraintStart_toStartOf="@id/details_value_guideline" />
 
                 <TextView
                     android:id="@+id/price_currency"
@@ -144,7 +143,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:visibility="visible"
-                    app:layout_constraintGuide_percent="0.20"
+                    app:layout_constraintGuide_percent="0.18"
                     tools:visibility="visible" />
 
                 <TextView
@@ -176,10 +175,10 @@
                     android:id="@+id/item_subcategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
                     android:layout_marginTop="16dp"
                     android:fontFamily="sans-serif-light"
                     android:text="@string/sub_cat"
+                    android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/item_location_details"
                     app:layout_constraintStart_toStartOf="@+id/main_characteristics"
                     app:layout_constraintTop_toBottomOf="@+id/item_category" />
@@ -189,10 +188,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:textSize="24sp"
                     android:fontFamily="sans-serif-light"
                     android:text="@string/location"
-                    app:layout_constraintBottom_toTopOf="@+id/item_expire_date"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toTopOf="@+id/itemLocationMapcationMap"
                     app:layout_constraintStart_toStartOf="@+id/item_subcategory"
                     app:layout_constraintTop_toBottomOf="@+id/item_subcategory" />
 
@@ -206,7 +205,7 @@
                     android:textSize="24sp"
                     app:layout_constraintBottom_toTopOf="@+id/item_condition"
                     app:layout_constraintStart_toStartOf="@+id/item_location_details"
-                    app:layout_constraintTop_toBottomOf="@+id/item_location_details" />
+                    app:layout_constraintTop_toBottomOf="@+id/itemLocationMap" />
 
                 <TextView
                     android:id="@+id/item_condition"
@@ -216,9 +215,9 @@
                     android:fontFamily="sans-serif-light"
                     android:text="@string/item_condition"
                     android:textSize="24sp"
+                    app:layout_constraintBottom_toTopOf="@id/description_guideline"
                     app:layout_constraintStart_toStartOf="@+id/item_title"
-                    app:layout_constraintTop_toBottomOf="@+id/item_expire_date"
-                    app:layout_constraintBottom_toTopOf="@id/description_guideline"/>
+                    app:layout_constraintTop_toBottomOf="@+id/item_expire_date" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/details_value_guideline"
@@ -253,8 +252,8 @@
                     android:id="@+id/item_location_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
                     android:text="@string/location"
+                    android:textSize="20sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/item_location_details"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
@@ -262,9 +261,9 @@
                 <TextView
                     android:id="@+id/item_expire_date_value"
                     android:layout_width="wrap_content"
-                    android:textSize="20sp"
                     android:layout_height="wrap_content"
                     android:hint="@string/date_edit"
+                    android:textSize="20sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/item_expire_date"
                     app:layout_constraintStart_toStartOf="@+id/details_value_guideline" />
 
@@ -273,7 +272,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.6" />
+                    app:layout_constraintGuide_percent="0.65" />
 
                 <TextView
                     android:id="@+id/item_description"
@@ -283,9 +282,9 @@
                     android:fontFamily="sans-serif-medium"
                     android:text="@string/description_header"
                     android:textSize="34sp"
+                    app:layout_constraintBottom_toTopOf="@id/item_picture_description_edit"
                     app:layout_constraintStart_toStartOf="@id/fieldsGuideline"
-                    app:layout_constraintTop_toTopOf="@+id/description_guideline"
-                    app:layout_constraintBottom_toTopOf="@id/item_picture_description_edit"/>
+                    app:layout_constraintTop_toTopOf="@+id/description_guideline" />
 
 
                 <EditText
@@ -293,8 +292,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/description"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@id/fieldsGuideline"
                     app:layout_constraintTop_toBottomOf="@id/item_description" />
 
@@ -313,6 +312,18 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layout_constraintGuide_begin="43dp" />
+
+                <com.example.myapplication.CustomMapView
+                    android:id="@+id/itemLocationMap"
+                    android:layout_width="0dp"
+                    android:layout_height="300dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toTopOf="@id/item_expire_date"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/item_location_details"
+                    app:layout_constraintVertical_bias="1.0" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
