--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,6 +52,9 @@
             app:launchSingleTop="false"
             app:popUpTo="@id/nav_itemList"
             app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_itemDetailsFragment_to_routeMapFragment"
+            app:destination="@id/routeMapFragment" />
     </fragment>
     <fragment
         android:id="@+id/ItemEditFragment"
@@ -98,4 +101,9 @@
             android:id="@+id/action_reviewListFragment_to_showProfileFragment"
             app:destination="@id/showProfileFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/routeMapFragment"
+        android:name="com.example.myapplication.RouteMapFragment"
+        android:label="fragment_route_map"
+        tools:layout="@layout/fragment_route_map" />
 </navigation>
