--- a/app/src/main/res/layout-land/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-land/item_details_buy_fragment.xml
@@ -337,6 +337,7 @@
                     android:id="@+id/customMapView"
                     android:layout_width="0dp"
                     android:layout_height="200dp"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toTopOf="@id/main_characteristics"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
