--- a/app/src/main/res/layout-large/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-large/item_details_buy_fragment.xml
@@ -346,8 +346,21 @@
                 android:layout_height="200dp"
                 app:layout_constraintBottom_toTopOf="@id/details_guideline"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/buyButton" />
+                app:layout_constraintStart_toStartOf="@id/buyButton"
+                app:layout_constraintTop_toBottomOf="@id/itemLocation"
+                />
+
+            <Button
+                android:id="@+id/directionbutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8sp"
+                android:backgroundTint="#4A89F3"
+                android:text="@string/get_dir"
+                android:textColor="#FFFFFF"
+                app:layout_constraintStart_toStartOf="@id/itemLocation"
+                app:layout_constraintBottom_toTopOf="@id/main_characteristics"
+                app:layout_constraintTop_toBottomOf="@id/itemLocation" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
