--- a/app/src/main/res/layout-large-port/fragment_edit_profile.xml
+++ b/app/src/main/res/layout-large-port/fragment_edit_profile.xml
@@ -167,7 +167,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />
 
-        <com.example.myapplication.CustomMapView
+        <com.example.myapplication.map.CustomMapView
             android:id="@+id/userLocation"
             android:layout_width="0dp"
             android:layout_height="0dp"
