--- a/app/src/main/res/layout-land/fragment_edit_profile.xml
+++ b/app/src/main/res/layout-land/fragment_edit_profile.xml
@@ -143,7 +143,7 @@
             app:layout_constraintBaseline_toBaselineOf="@+id/textViewUserLocationEditProfile"
             app:layout_constraintStart_toEndOf="@+id/textViewUserLocationEditProfile" />
 
-        <com.example.myapplication.CustomMapView
+        <com.example.myapplication.map.CustomMapView
             android:id="@+id/userLocation"
             android:layout_width="0dp"
             android:layout_height="200dp"
