--- a/app/src/main/res/layout-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-land/fragment_item_edit.xml
@@ -296,7 +296,7 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="43dp" />
 
-            <com.example.myapplication.CustomMapView
+            <com.example.myapplication.map.CustomMapView
                 android:id="@+id/itemLocationMap"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
