--- a/app/src/main/res/layout-land/item_details_buy_fragment.xml
+++ b/app/src/main/res/layout-land/item_details_buy_fragment.xml
@@ -345,7 +345,7 @@
                     app:layout_constraintTop_toTopOf="@+id/details_guideline"
                     tools:text="@string/buy" />
 
-                <com.example.myapplication.CustomMapView
+                <com.example.myapplication.map.CustomMapView
                     android:id="@+id/itemLocation"
                     android:layout_width="0dp"
                     android:layout_height="200dp"
