--- a/app/src/main/res/layout-land/item_details_fragment.xml
+++ b/app/src/main/res/layout-land/item_details_fragment.xml
@@ -284,7 +284,7 @@
                 app:layout_constraintStart_toStartOf="@+id/item_description"
                 app:layout_constraintTop_toBottomOf="@+id/item_description" />
 
-            <com.example.myapplication.CustomMapView
+            <com.example.myapplication.map.CustomMapView
                 android:id="@+id/itemLocation"
                 android:layout_width="0dp"
                 android:layout_height="250dp"
