--- a/app/src/main/res/layout-large-land/fragment_item_edit.xml
+++ b/app/src/main/res/layout-large-land/fragment_item_edit.xml
@@ -191,7 +191,7 @@
                     android:fontFamily="sans-serif-light"
                     android:text="@string/location"
                     android:textSize="24sp"
-                    app:layout_constraintBottom_toTopOf="@+id/itemLocationMapcationMap"
+                    app:layout_constraintBottom_toTopOf="@+id/itemLocationMap"
                     app:layout_constraintStart_toStartOf="@+id/item_subcategory"
                     app:layout_constraintTop_toBottomOf="@+id/item_subcategory" />
 
@@ -313,7 +313,7 @@
                     android:orientation="vertical"
                     app:layout_constraintGuide_begin="43dp" />
 
-                <com.example.myapplication.CustomMapView
+                <com.example.myapplication.map.CustomMapView
                     android:id="@+id/itemLocationMap"
                     android:layout_width="0dp"
                     android:layout_height="300dp"
