--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -160,7 +160,7 @@
                 app:layout_constraintTop_toBottomOf="@id/editViewUserLocationEditProfile"
                 app:layout_constraintVertical_bias="0.15" />
 
-            <com.example.myapplication.CustomMapView
+            <com.example.myapplication.map.CustomMapView
                 android:id="@+id/userLocation"
                 android:layout_width="0dp"
                 android:layout_height="400dp"
