--- a/app/src/main/res/layout/fragment_route_map.xml
+++ b/app/src/main/res/layout/fragment_route_map.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RouteMapFragment">
+    tools:context=".map.RouteMapFragment">
 
-    <com.example.myapplication.CustomMapView
+    <com.example.myapplication.map.CustomMapView
         android:id="@+id/mapRoute"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
