--- a/app/src/main/res/layout/fragment_show_profile.xml
+++ b/app/src/main/res/layout/fragment_show_profile.xml
@@ -143,7 +143,7 @@
                 app:layout_constraintStart_toEndOf="@+id/userRatingBar"
                 app:layout_constraintTop_toTopOf="@+id/userRatingBar" />
 
-            <com.example.myapplication.CustomMapView
+            <com.example.myapplication.map.CustomMapView
                 android:id="@+id/userLocation"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
